# libphonybl

./: .gitignore  CMakeLists.txt  README.md
doc/: overview.dia
include/phonybl/: phonybl.hpp  phonyblCore.hpp  phonybl_biwak.hpp  phonybl_host.hpp
src/: main.cpp  phonyblCore.cpp
tests/: CMakeLists.txt  test_main.cpp  test_phonybl.cpp
